# auditLens

./: .dockerignore  .env.example  .env.prod.example  .gitignore  Dockerfile  MAPTMP.txt  README.md  STREAMING_PLAN.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  tmp_repro_clarify.py
demo/responses/: doverennost.json  realty_platforms.json
docker/: entrypoint.sh
docker/searxng/: settings.prod.yml
docs/: ONBOARDING.md  OVERVIEW_BRIEFING_PLAN.md  TROUBLESHOOTING.md
migrations/: 001_init.sql  002_reviews.sql  003_runs.sql  005_rag_foundation.sql  010_daily_digest.sql  ensure_vector.sql
scripts/: _demo_smoke.py  _test_entity_extractor.py  _test_schema_normalizer.py  _test_source_finder.py  _test_v2_forced_read.py  _test_v2_preview_charts.py  refilter_conduct.py  run_conduct_reports.py  setup.ps1  setup.sh  start.ps1
src/bank_audit/ai/: analyst.py  deep_research.py  llm_utils.py
src/bank_audit/digest/: __init__.py  aggregator.py  news.py  pipeline.py  scheduler.py  store.py  writer.py
src/bank_audit/loophole/: __init__.py  classify.py  refine.py  repository.py  web.py
src/bank_audit/loophole/chat/: clarify.py  graph.py  hooks.py  llm_adapters.py  nanobot_agent.py  tools_nanobot.py
src/bank_audit/loophole/chat/prompt/: 07_nanobot_system.md
src/bank_audit/loophole/parsers/: generator.py
src/bank_audit/loophole/static/: loophole.jsx
src/bank_audit/rag/: reviews_dash.py  reviews_llm.py  web_search.py
src/bank_audit/research/: audit_focus_filter.py  conduct_research.py  core_schema.py  entity_extractor.py  fact.py  fact_extractor.py  gap_filler.py  llm_throttle.py  matrix_builder.py  matrix_renderer.py  narrative_renderer.py  orchestrator.py  outline_planner.py  pdf_extractor.py  query_planner.py  regulatory_source_finder.py  research_brief.py  schema_normalizer.py  source_finder.py  topic_classifier.py  triple_extractor.py
src/bank_audit/research/narrative_generators/: __init__.py  base.py  cant_do_box.py  conflict_explainer.py  digital_channels.py  government_programs.py  key_findings.py  per_entity_breakdown.py  pricing_breakdown.py  regulatory_box.py  requirements_box.py  risks_recommendations.py  unified_synthesis.py
src/bank_audit/research/v2/: __init__.py  analyst.py  base_agent.py  conductor.py  critic.py  knowledge_bundle.py  llm_throttle_v2.py  orchestrator.py  passive_indexer.py
src/bank_audit/research/v2/agents/: __init__.py  market.py  ranking.py  regulatory.py  researcher.py  reviews.py
src/bank_audit/research/v2/tools/: __init__.py  source_registry_helper.py  tool_specs.py  web_tools.py
src/bank_audit/web/: app.py  demo_stream.py  pdf_export.py
src/bank_audit/web/static/: app.jsx  index.html
tests/: test_digest.py
tests/fixtures/: tg_banksta.html
tests/loophole/: conftest.py  test_db_query_tool.py  test_hooks.py  test_llm_adapters.py  test_nanobot_agent.py  test_nanobot_graph.py  test_tools_nanobot.py  test_web.py
