[project]
name = "auditlens"
version = "1.0.0"
description = "AuditLens — Deep-Research платформа для внутреннего аудита банковских продуктов: RAG + LLM-агент, сравнительные отчёты с цитированием, графики, PDF-экспорт."
requires-python = ">=3.11"
license = { text = "MIT" }
readme = "README.md"
authors = [
  { name = "AuditLens Contributors" },
]
keywords = ["banking", "audit", "rag", "llm", "deep-research", "fintech"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial",
]

dependencies = [
  # ── HTTP / scraping ────────────────────────────────────────────────────
  "httpx>=0.27",
  "selectolax>=0.3.21",
  "playwright>=1.45",
  "tenacity>=8.3",
  "ddgs>=9.0",          # мульти-движковый web-search (fallback когда SearXNG down)

  # ── Database / ORM ────────────────────────────────────────────────────
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "pgvector>=0.3",
  "alembic>=1.13",

  # ── Web server / streaming ────────────────────────────────────────────
  "fastapi>=0.111",
  "uvicorn[standard]>=0.29",
  "sse-starlette>=2.1",

  # ── LLM clients ───────────────────────────────────────────────────────
  "openai>=1.30",
  "anthropic>=0.28",

  # ── Embeddings (locally, multilingual) ────────────────────────────────
  "sentence-transformers>=3.0",
  "torch>=2.2",

  # ── Document processing (PDF/DOCX/XLSX/PPTX → text) ──────────────────
  "openpyxl>=3.1",
  "python-pptx>=0.6",

  # ── Common utilities ──────────────────────────────────────────────────
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "rapidfuzz>=3.9",
  "structlog>=24.1",
  "python-dotenv>=1.0",
  "click>=8.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
  "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/SashaEee/auditLens"
Documentation = "https://github.com/SashaEee/auditLens/blob/main/docs/"
Issues = "https://github.com/SashaEee/auditLens/issues"

[project.scripts]
auditlens = "bank_audit.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
